# icp

./: .gitignore  pyproject.toml  requirements.txt
docs/: README.md  final_point_estimation.md  initializer.md  mqtt_client.md  point_estimation.md  starter.md
icp/: main.py
icp/components/: component_registry.py  final_point_estimation.py  initializer.py  point_estimation.py  starter.py
icp/icp_tests/test_components/: measure_generator.py  mpu9250_simulator.py  simulator.py  test_component_registry.py  test_initializer.py  test_starter.py
icp/icp_tests/test_mqtt/: test_client.py
icp/icp_tests/test_utils/: test_measure_generator.py  test_simulator.py
icp/mqtt/: client.py
icp/utils/: constants.py  measure_generator.py
tests/test_components/: test_final_point_estimation.py  test_point_estimation.py  test_starter.py
tests/test_utils/: test_measure_generator.py  test_simulator.py
